--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@ body {
 }
 
 .schedule-details p {
-    margin: 0.6rem 0;
+    margin: 0.3rem 0;
     font-size: 1.1rem;
     line-height: 1.5;
 }
